<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvtInp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvOut"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="end"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSeven"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Seven" />

                <Button
                    android:id="@+id/btnEight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Eight" />

                <Button
                    android:id="@+id/btnNine"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Nine" />

                <Button
                    android:id="@+id/btnSum"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_Sum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Four" />

                <Button
                    android:id="@+id/btnFive"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Five" />

                <Button
                    android:id="@+id/btnSix"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Six" />

                <Button
                    android:id="@+id/btnSubtract"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_Subtract" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_One" />

                <Button
                    android:id="@+id/btnTwo"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Two" />

                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Three" />

                <Button
                    android:id="@+id/btnMultiplication"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_Multiplication" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnSign"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Sign" />

                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Zero" />

                <Button
                    android:id="@+id/btnDot"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Dot" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_Divide" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_Clear" />

                <Button
                    android:id="@+id/btnEqual"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:rotation="0"
                    android:text="@string/btn_Equals" />

                <!--<Button
                    android:id="@+id/btnNine"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Button" />

                <Button
                    android:id="@+id/btnSum"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button" />-->
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>